# memory-copilot

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
